force-app/main/default/objects/CWS_Product_Service_Feedback__c/CWS_Product_Service_Feedback__c.object-meta.xml
<CustomObject>
    <description>Object to hold the Product and Service Feedbacks from Partners or Customers</description>
    <label>Product &amp; Service Feedback</label>
    <nameField>
        <displayFormat>PSF-{00000}</displayFormat>
        <label>Product &amp; Service Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product &amp; Service Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>