force-app/main/default/objects/CWS_Product_Service_Feedback__c/fields/CWS_Account__c.field-meta.xml
<CustomField>
    <fullName>CWS_Account__c</fullName>
    <description>Account Name</description>
    <inlineHelpText>Account Name</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product &amp; Service Feedback</relationshipLabel>
    <relationshipName>Product_Service_Feedback</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>