force-app/main/default/objects/CWS_Product_Service_Feedback__c/fields/CWS_Case__c.field-meta.xml
<CustomField>
    <fullName>CWS_Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related Case</description>
    <inlineHelpText>Related Case</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Product &amp; Service Feedback</relationshipLabel>
    <relationshipName>Product_Service_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>