force-app/main/default/objects/CWS_Product_Service_Feedback__c/fields/CWS_Category__c.field-meta.xml
<CustomField>
    <fullName>CWS_Category__c</fullName>
    <description>Select the Category</description>
    <inlineHelpText>Select the Category</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Education</fullName>
            </value>
            <value>
                <fullName>People</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>