force-app/main/default/objects/CWS_Product_Service_Feedback__c/fields/CWS_Category_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Category_Sub_Type__c</fullName>
    <description>Sub-type of the Category</description>
    <inlineHelpText>Sub-type of the Category</inlineHelpText>
    <label>Category Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CWS_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Features (or lack of)</fullName>
            </value>
            <value>
                <fullName>Function Concerns</fullName>
            </value>
            <value>
                <fullName>Knowledge</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Ownership</fullName>
            </value>
            <value>
                <fullName>Partner Unawareness</fullName>
            </value>
            <value>
                <fullName>Process Gap</fullName>
            </value>
            <value>
                <fullName>Process limitation</fullName>
            </value>
            <value>
                <fullName>Timeliness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>