force-app/main/default/objects/CWS_Product_Service_Feedback__c/fields/CWS_Contact__c.field-meta.xml
<CustomField>
    <fullName>CWS_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Contact Name</description>
    <inlineHelpText>Contact Name</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Product &amp; Service Feedback</relationshipLabel>
    <relationshipName>Product_Service_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>