force-app/main/default/objects/CWS_Product_Service_Feedback__c/fields/CWS_Country__c.field-meta.xml
<CustomField>
    <fullName>CWS_Country__c</fullName>
    <description>Billing Country from the Account</description>
    <formula>CWS_Account__r.BillingCountry</formula>
    <inlineHelpText>Billing Country from the Account</inlineHelpText>
    <label>Country</label>
    <type>Text</type>
</CustomField>