force-app/main/default/objects/CWS_Product_Service_Feedback__c/fields/CWS_Feedback_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Feedback_Sub_Type__c</fullName>
    <description>Sub-type of the Feedback</description>
    <inlineHelpText>Sub-type of the Feedback</inlineHelpText>
    <label>Feedback Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>Issue/ Complaint</fullName>
            </value>
            <value>
                <fullName>Praise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>