force-app/main/default/objects/CWS_Product_Service_Feedback__c/fields/CWS_Feedback_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Feedback_Type__c</fullName>
    <description>Select the type of the Feedback</description>
    <inlineHelpText>Select the type of the Feedback</inlineHelpText>
    <label>Feedback Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Feedback</fullName>
            </value>
            <value>
                <fullName>Service Feedback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>