force-app/main/default/objects/CWS_Product_Service_Feedback__c/fields/CWS_Full_Comments__c.field-meta.xml
<CustomField>
    <fullName>CWS_Full_Comments__c</fullName>
    <description>Full Comments</description>
    <inlineHelpText>Full Comments</inlineHelpText>
    <label>Full Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>