force-app/main/default/objects/CWS_Product_Service_Feedback__c/fields/CWS_Partner_MRR__c.field-meta.xml
<CustomField>
    <fullName>CWS_Partner_MRR__c</fullName>
    <description>MRR associated with the Partner</description>
    <inlineHelpText>MRR associated with the Partner</inlineHelpText>
    <label>Partner MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>