force-app/main/default/objects/CWS_Product_Service_Feedback__c/fields/CWS_Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Partner_Type__c</fullName>
    <description>Partner categorization based on their MRR</description>
    <inlineHelpText>Partner categorization based on their MRR</inlineHelpText>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Touch</fullName>
            </value>
            <value>
                <fullName>Low Touch</fullName>
            </value>
            <value>
                <fullName>Tech Touch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>