force-app/main/default/objects/CWS_Product_Service_Feedback__c/fields/CWS_Product_MRR__c.field-meta.xml
<CustomField>
    <fullName>CWS_Product_MRR__c</fullName>
    <description>MRR of the associated Product</description>
    <inlineHelpText>MRR of the associated Product</inlineHelpText>
    <label>Product MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>