force-app/main/default/objects/CWS_Product_Service_Feedback__c/fields/CWS_Product_Service__c.field-meta.xml
<CustomField>
    <fullName>CWS_Product_Service__c</fullName>
    <description>Product/Service</description>
    <inlineHelpText>Product/Service</inlineHelpText>
    <label>Product/Service</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CWS_Feedback_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Assist Dedicated Tech</fullName>
            </value>
            <value>
                <fullName>Assist Help Desk</fullName>
            </value>
            <value>
                <fullName>Assist Tech Advantage</fullName>
            </value>
            <value>
                <fullName>Automate</fullName>
            </value>
            <value>
                <fullName>Brightgauge</fullName>
            </value>
            <value>
                <fullName>Command</fullName>
            </value>
            <value>
                <fullName>Control</fullName>
            </value>
            <value>
                <fullName>CW Support</fullName>
            </value>
            <value>
                <fullName>Fortify</fullName>
            </value>
            <value>
                <fullName>Identify</fullName>
            </value>
            <value>
                <fullName>IT Nation Evolve</fullName>
            </value>
            <value>
                <fullName>ITBoost</fullName>
            </value>
            <value>
                <fullName>LMI Rescue</fullName>
            </value>
            <value>
                <fullName>Manage</fullName>
            </value>
            <value>
                <fullName>MDM</fullName>
            </value>
            <value>
                <fullName>Not Product Related</fullName>
            </value>
            <value>
                <fullName>Onboarding / Implementation</fullName>
            </value>
            <value>
                <fullName>Other-3rd party products</fullName>
            </value>
            <value>
                <fullName>Partner Care</fullName>
            </value>
            <value>
                <fullName>Partner Sales</fullName>
            </value>
            <value>
                <fullName>Partner Success</fullName>
            </value>
            <value>
                <fullName>Perch</fullName>
            </value>
            <value>
                <fullName>R1 Soft</fullName>
            </value>
            <value>
                <fullName>Recover</fullName>
            </value>
            <value>
                <fullName>Sell</fullName>
            </value>
            <value>
                <fullName>StratoZen</fullName>
            </value>
            <value>
                <fullName>Webroot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>