force-app/main/default/objects/CWS_Product_Service_Feedback__c/fields/CWS_Region__c.field-meta.xml
<CustomField>
    <fullName>CWS_Region__c</fullName>
    <description>Region of the Account/ Owner</description>
    <formula>TEXT(CWS_Account__r.CWS_Region__c)</formula>
    <inlineHelpText>Region of the Account/ Owner</inlineHelpText>
    <label>Region</label>
    <type>Text</type>
</CustomField>