force-app/main/default/objects/CWS_Product_Service_Feedback__c/fields/CWS_Related_Manage_Ticket__c.field-meta.xml
<CustomField>
    <fullName>CWS_Related_Manage_Ticket__c</fullName>
    <description>Associated Manage Ticket Number</description>
    <inlineHelpText>Associated Manage Ticket Number</inlineHelpText>
    <label>Related Manage Ticket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>