force-app/main/default/objects/CWS_Product_Service_Feedback__c/fields/CWS_Reported_By__c.field-meta.xml
<CustomField>
    <fullName>CWS_Reported_By__c</fullName>
    <description>Feedback reporting by the Team</description>
    <inlineHelpText>Feedback reporting by the Team</inlineHelpText>
    <label>Reported By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Care</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>VOP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>