force-app/main/default/objects/CWS_Product_Service_Feedback__c/fields/CWS_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>CWS_Short_Description__c</fullName>
    <description>Enter in &quot;Other&quot; option not listed in &quot;Product/Service&quot;.</description>
    <inlineHelpText>Enter in &quot;Other&quot; option not listed in &quot;Product/Service&quot;.</inlineHelpText>
    <label>Short Description</label>
    <type>TextArea</type>
</CustomField>