force-app/main/default/objects/CWS_Product_Service_Feedback__c/fields/CWS_Theme__c.field-meta.xml
<CustomField>
    <fullName>CWS_Theme__c</fullName>
    <description>Theme of the Feedback</description>
    <inlineHelpText>Theme of the Feedback</inlineHelpText>
    <label>Theme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Scope</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>