force-app/main/default/objects/CWS_Product_Service_Feedback__c/fields/CWS_Ticket_JIRA__c.field-meta.xml
<CustomField>
    <fullName>CWS_Ticket_JIRA__c</fullName>
    <description>Related Ticket or JIRA Ticket Number</description>
    <inlineHelpText>Related Ticket or JIRA Ticket Number</inlineHelpText>
    <label>Ticket/ JIRA #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>